feat: added suburbs

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,9 @@
 ---
-import Dinosaurs from '../components/Dinosaurs.astro';
+import Suburbs from '../components/Suburbs.astro';
 import Layout from '../layouts/Layout.astro';
 
 ---
 
 <Layout>
-	<Dinosaurs />
+	<Suburbs />
 </Layout>
