feat: adding a structure to site
Added exploration blocks for suburbs, location and universities.

--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -24,6 +24,11 @@ import background from '../assets/background.svg';
 					>
 				</a>
 			</section>
+			<section id="explore">
+				<a href="/suburbs/">Explore suburbs</a>
+				<a href="/universities/">Explore universities</a>
+				<a href="/locations/">Explore locations</a>
+			</section>
 		</section>
 	</main>
 
