--- a/src/pages/suburbs.astro
+++ b/src/pages/suburbs.astro
@@ -1,9 +1,9 @@
 ---
-import Welcome from '../components/Welcome.astro';
 import Layout from '../layouts/Layout.astro';
+import Suburbs from '../components/Suburbs.astro';
 
 ---
 
 <Layout>
-	<Welcome />
+    <Suburbs />
 </Layout>
