adde explore card

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,9 @@
 ---
-import Welcome from '../components/Welcome.astro';
-import Layout from '../layouts/Layout.astro';
+import Welcome from '@/components/Welcome.astro';
+import BaseLayout from '@/layouts/BaseLayout.astro';
 
 ---
 
-<Layout>
+<BaseLayout>
 	<Welcome />
-</Layout>
+</BaseLayout>
