--- a/src/pages/suburbs.astro
+++ b/src/pages/suburbs.astro
@@ -1,9 +1,9 @@
 ---
-import Layout from '../layouts/Layout.astro';
-import Suburbs from '../components/Suburbs.astro';
+import BaseLayout from '@/layouts/BaseLayout.astro';
+import Suburbs from '@/components/Suburbs.astro';
 
 ---
 
-<Layout>
+<BaseLayout>
     <Suburbs />
-</Layout>
+</BaseLayout>
