--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -15,7 +15,7 @@ const exploreCards: ExploreCardProps[] = [
 	<img id="background" src={background.src} alt="" fetchpriority="high" />
 	<main>
 		<section id="hero">
-			<a href="https://astro.build"
+			<!-- <a href="https://astro.build"
 				><img src={astroLogo.src} width="115" height="48" alt="Astro Homepage" /></a
 			>
 			<h1>
@@ -31,7 +31,7 @@ const exploreCards: ExploreCardProps[] = [
 						></path></svg
 					>
 				</a>
-			</section>
+			</section> -->
 			<section id="explore">
 				<div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 py-8">
 					{exploreCards.map(card => <div class="basis-1/3"><ExploreCard exploreCard={card}/></div>)}
