--- a/src/pages/suburbs.astro
+++ b/src/pages/suburbs.astro
@@ -1,9 +1,9 @@
 ---
 import BaseLayout from '@/layouts/BaseLayout.astro';
-import Suburbs from '@/components/Suburbs.astro';
+import SuburbsComponent from '@/components/Suburbs.astro';
 
 ---
 
 <BaseLayout>
-    <Suburbs />
+    <SuburbsComponent />
 </BaseLayout>
