--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -12,7 +12,7 @@ import '@/styles/base.css'
 		<meta name="generator" content={Astro.generator} />
 		<title>Shared Properties</title>
 	</head>
-	<body>
+	<body class="bg-[url('/background.svg')] backdrop-blur-4xl fixed size-full top-0 left-0 -z-1">
 		<Navbar />
 		<slot />
 		<!-- <Footer /> -->
